[gd_scene load_steps=7 format=3 uid="uid://d08ojau48q8ee"]

[ext_resource type="Script" path="res://items/SwordItem.gd" id="1_c371v"]
[ext_resource type="Texture2D" uid="uid://deleoq8dalbdc" path="res://items/SwordItem.png" id="1_ey3kf"]

[sub_resource type="Animation" id="Animation_btdj3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_xn2st"]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_n63xt"]
resource_name = "swing"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2, 0.366667, 0.5, 0.6),
"transitions": PackedFloat32Array(0.554, 1, 0.574, 0.637, 1.56, 1),
"update": 0,
"values": [-1.80293, -3.72802, -6.28319, -7.41765, -6.11738, -6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jphj6"]
_data = {
"RESET": SubResource("Animation_btdj3"),
"idle": SubResource("Animation_xn2st"),
"swing": SubResource("Animation_n63xt")
}

[node name="SwordItem" type="Node2D"]
position = Vector2(10, 15)
script = ExtResource("1_c371v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-27.0002, 45.9999)
rotation = -0.392699
texture = ExtResource("1_ey3kf")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jphj6")
}
